Content change, remove section and some minor layouts

--- a/index.html
+++ b/index.html
@@ -59,26 +59,37 @@
         <div class="container">
           <p class="tagline">About</p>
           <h2 class="about__headline">ALADINO</h2>
-          <h3 class="about__subhead">Aladino is more than just a Web3 project</h3>
-          <p class="subtitle">it's a dynamic venturewith a two-fold mission. Our dedication liesnot only in delivering top-notch,interconnected Fintech services but also inmaximizing user returns through ourcutting-edge mining finance protocol.</p>
+          <h3 class="about__subhead">Smart Mining Solutions</h3>
+          <p class="subtitle">
+            We provide a unique service that enables you to acquire
+hashrate without being tied to a specific equipment
+model.
+            </p>
           <div class="about-cards-wrapper">
             <div class="card card--about">
               <img class="card__icon card__icon--about" src="./assets/images/systematic-averaging-graph.svg" width="106" alt="" />
-              <p class="card__text card__text--about">Systematic Dollar Cost Averaging approach for seamless alcoin-to-Bitcoin swaps.</p>
+              <p class="card__text card__text--about">Employing a systematic Dollar Cost
+                Averaging strategy for smooth
+                altcoin-to-Bitcoin exchanges.</p>
             </div>
             <div class="card card--about">
               <img class="card__icon card__icon--about" src="./assets/images/diamond-icon.svg" width="106" alt="" />
-              <p class="card__text card__text--about">Our approach is meticulously tailored to cultivate enduring value for our valued customers.</p>
+              <p class="card__text card__text--about">We meticulously craft our approach
+                to ensure long-lasting value for our
+                esteemed customers.</p>
             </div>
           </div>
-          <p class="about__text">Our engagement in mining spans a diverse range of PoW cryptocurrencies, coupled with our expertise in swiftly transforming Altcoins into Bitcoin during prime market conditions. This strategic maneuver forms the backbone of our unique offering, blending device acquisition tactics with the synergy of mining</p>
+          <p class="about__text">Our Smart Mining solution provides a flexible and
+            user-friendly entry into mining, eliminating the necessity
+            for in-depth technical expertise, all while striving to
+            outperform traditional Bitcoin mining methods.</p>
         </div>
       </section>
 
       <!-- ========== Mercato ========== -->
       <section class="mercato">
         <div class="container">
-          <p class="tagline">MERCATO MINING</p>
+          <p class="tagline">MINING MARKET</p>
           <h2>Bad News</h2>
           <div class="cards-wrapper mercato-cards">
             <div class="mercato-card">
@@ -102,7 +113,7 @@
               <a class="mercato-card__link" href="https://www.theblock.co/learn/245719/is-bitcoin-mining-bad-for-the-environment">https://www.theblock.co/learn/245719/is-bitcoin-mining-bad-for-the-environment</a>
             </div>
           </div>
-          <p class="tagline">MERCATO MINING</p>
+          <p class="tagline">MINING MARKET</p>
           <h2>Good News</h2>
           <div class="cards-wrapper mercato-cards">
             <div class="mercato-card">
@@ -216,14 +227,33 @@
           <h2>Aladino bet</h2>
           <div class="ourbet-cards">
             <div class="card card--ourbet">
-              <h4>TITLE HERE
-                Line 2</h4>
-                <p>Lorem ipsum dvolor sit amet, consectetuer adipiscing elit, sed diam nonummynibh euismod tincidunt ut laoreet doloremagna aliquam erat volutpat. Ut wisienim ad minim veniam, quis nostrudexerci tation ullamcorper suscipit lobortisnisl ut aliquip ex ea commodo consequat.Lorem ipsum dvolor sit amet, consectetuer adipiscing elit, sed diam nonummynibh euismod tincidunt ut laoreet dolore</p>
+              <h4 class="text-green">TIME TO MARKET</h4>
+              <p>We have noticed the discrepancy
+                between the news reported in the
+                media and the actual investment
+                movements of large companies and
+                funds. It's completely contrasting.
+                Big companies are focused on
+                purchasing their miners today.
+                Aladino's challenge is to have $100
+                million worth of miners installed
+                before the start of the bull run,
+                following the exact investment
+                strategy of major funds.</p>
             </div>
             <div class="card card--ourbet">
-              <h4>TITLE HERE
-                Line 2</h4>
-                <p>Lorem ipsum dvolor sit amet, consectetuer adipiscing elit, sed diam nonummynibh euismod tincidunt ut laoreet doloremagna aliquam erat volutpat. Ut wisienim ad minim veniam, quis nostrudexerci tation ullamcorper suscipit lobortisnisl ut aliquip ex ea commodo consequat.Lorem ipsum dvolor sit amet, consectetuer adipiscing elit, sed diam nonummynibh euismod tincidunt ut laoreet dolore</p>
+              <h4 class="text-green">BET LIKE A PRO!</h4>
+              <p>Are you ready to bet like the big players?
+                At Aladino, we've cracked the
+                code to success in the mining world,
+                and we want you to be part of it.</p>
+                <p>Our strategy is simple: Purchase an
+                  NFT (Hash Rate) and be on your way
+                  to having your mining operation
+                  ready. The world of cryptocurrency
+                  mining is evolving rapidly, and we're
+                  ahead of the curve, secure your
+                  place.</p>
             </div>
           </div>
         </div>
@@ -265,16 +295,44 @@
           <h2>CLIENTS</h2>
           <div class="clients-cards">
             <div class="client-card">
-              <h4>LOGO HERE</h4>
-              <p>Lorem ipsum dvolor sit amet, consectetuer adipiscing elit, sed diam nonummynibh euismod tincidunt ut laoreet doloremagna aliquam erat volutpat. Ut wisienim ad minim veniam, quis nostrudexerci tation </p>
+              <div class="client-card__logo">
+                <img src="./assets/images/handlogo.svg" width="90" alt="">
+              </div>
+              <p>
+                Inflation, often referred to as the
+silent tax, is a concept that
+affects economies and
+households worldwide. It
+represents the increase in the
+general price level of goods and
+services over time, leading to a
+decrease in the purchasing
+power of a currency.
+              </p>
             </div>
             <div class="client-card">
-              <h4>LOGO HERE</h4>
-              <p>Lorem ipsum dvolor sit amet, consectetuer adipiscing elit, sed diam nonummynibh euismod tincidunt ut laoreet doloremagna aliquam erat volutpat. Ut wisienim ad minim veniam, quis nostrudexerci tation </p>
+              <div class="client-card__logo">
+                <img src="./assets/images/handlogo.svg" width="90" alt="">
+              </div>
+              <p>To navigate the challenges
+                posed by inflation, individuals
+                often turn to strategies like
+                buyng in assets that tend to
+                appreciate with inflation, and
+                keeping an eye on central bank
+                policies.</p>
             </div>
             <div class="client-card">
-              <h4>LOGO HERE</h4>
-              <p>Lorem ipsum dvolor sit amet, consectetuer adipiscing elit, sed diam nonummynibh euismod tincidunt ut laoreet doloremagna aliquam erat volutpat. Ut wisienim ad minim veniam, quis nostrudexerci tation </p>
+              <div class="client-card__logo">
+                <img src="./assets/images/handlogo.svg" width="90" alt="">
+              </div>
+              <p>Mining alternative
+                cryptocurrencies (altcoins) can
+                potentially serve as a hedge
+                against inflation compared to
+                traditional savings accounts in a
+                bank or hide cash under your
+                mattress.</p>
             </div>
           </div>
         </div>
@@ -289,22 +347,40 @@
             <div class="proto-card">
               <img src="./assets/images/NFT-logo.svg" alt="">
               <h4 class="proto-card__title">Purchase</h4>
-              <p class="proto-card__text">Customers buy our NFT and hold onto it. The funds from these purchases fuel our mining setup, following a strategic device acquisition plan that syncs with BTC price trends.</p>
+              <p class="proto-card__text">Customers buy our NFT
+                (hashrate). The funds from
+                these purchases fuel our
+                mining setup, following a
+                strategic device
+                acquisition plan</p>
             </div>
             <div class="proto-card">
               <img src="./assets/images/Earn-icon.svg" alt="">
               <h4 class="proto-card__title">Earn</h4>
-              <p class="proto-card__text">Customers and distributors reap BTC rewards from mining and trading altcoins for BTC. The longer the hold, the higher the return..</p>
+              <p class="proto-card__text">Customers and Members
+                reap BTC rewards from
+                mining and trading
+                altcoins for BTC.</p>
             </div>
             <div class="proto-card">
               <img src="./assets/images/generate-icon.svg" alt="">
               <h4 class="proto-card__title">Generate</h4>
-              <p class="proto-card__text">We generate an assorted mix of  cryptocurrencies for diversification. These coins pass through our Aladino protocol where we apply a practical swapping strategy and integrate with DeFi practices.</p>
+              <p class="proto-card__text">We generate an assorted
+                mix of cryptocurrencies for
+                diversification. These coins
+                pass through our Aladino
+                protocol where we apply a
+                practical swapping strategy.</p>
             </div>
             <div class="proto-card">
               <img class="proto-card__image" src="./assets/images/exit-icon.svg" alt="">
               <h4 class="proto-card__title">Exit</h4>
-              <p class="proto-card__text">If someone decides to leave, no worries. They can sell the NFT anytime to anyone. Position in the network remains intact.</p>
+              <p class="proto-card__text">If someone decides to
+                leave, no worries.
+                They can sell the NFT
+                anytime to anyone.
+                Position in the affiliate
+                structure remains intact.</p>
             </div>
           </div>
         </div>
@@ -320,26 +396,6 @@
           </div>
         </div>
       </section>
-      <section class="whyus">
-        <div class="container">
-          <h2 class="whuus__title">Why Aladino</h2>
-          <div class="whyus-content">
-            <div>
-              <h3 class="whyus__heading whyus__heading--right">Why Not Hold your Money in a Bank</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-              <p>ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-            </div>
-            <div class="versus">VS.</div>
-            <div>
-              <h3 class="whyus__heading">Buy a Miners and Make Money</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis.</p>
-              <p>ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Risus commodo viverra maecenas accumsan lacus vel facilisis</p>
-            </div>
-          </div>
-        </div>
-      </section>
       <section class="steps">
         <div class="container">
           <h2>How to Start</h2>
@@ -352,16 +408,18 @@
             <div class="step">
               <img src="./assets/images/purchase-nft-icon.svg" width="100" alt="" />
               <p>
-                Purchase an <br />
-                NFT
+                PURCHASE AN <br>
+NFT <br>
+(HASHRATE)
               </p>
             </div>
             <img class="step__arrow" src="./assets/images/arrow-next.svg" width="100" height="100" alt="" />
             <div class="step">
               <img src="./assets/images/get-mrb-in-btc-icon.svg" width="100" alt="" />
               <p>
-                Get MRB <br />
-                in BTC
+                GET MINING <br>
+                REWARDS <br>
+                IN BTC
               </p>
             </div>
             <img class="step__arrow" src="./assets/images/arrow-next.svg" width="100" height="100" alt="" />
@@ -394,7 +452,13 @@
                   <div class="member__role">CEO</div>
                 </div>
               </div>
-              <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+              <p class="member__text">A throwback pic from a few moons ago. I've got a soft spot for
+                motorcycles and dabble in a bunch of sports. The hair's taken
+                a step back, and my beard's rocking that silver fox look, quite
+                the opposite of this AI-touched pic. Down below, you'll find
+                my outdated Linkedin profile and background, which I'll dust
+                off every now and then (maybe once every year or two).
+                I'm not a big fan of the social scene.</p>
               <div class="member__link">
                 <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
               </div>
@@ -410,7 +474,12 @@
                   <div class="member__role">COO</div>
                 </div>
               </div>
-              <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+              <p class="member__text">Strong Marketing and Sales experience combined with solid
+                administrative, operations and coordination skills.
+                Act with the principles of the conscious business in respect of
+                people, planet, prosperity. <br>
+                Always focused on exceeding expectations of customers,
+                distributors and companies.</p>
               <div class="member__link">
                 <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
               </div>
@@ -426,7 +495,13 @@
                   <div class="member__role">CFO</div>
                 </div>
               </div>
-              <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+              <p class="member__text">I started working as a certified public accountant and tax
+                consultant, but I wasn't happy because I was helping people
+                lose money and, moreover, making them pay taxes for not
+                getting back the services they needed. So I started working
+                inside companies to avoid these tears, with partial improvement.
+                Today with Aladino I can also put together my experiences
+                in crypto mining and make people happy.</p>
               <div class="member__link">
                 <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
               </div>
@@ -435,14 +510,18 @@
             <div class="member-card">
               <div class="member-header">
                 <div>
-                  <img class="member__avatar" src="./assets/images/Avatar.jpg" width="100" alt="" />
+                  <img class="member__avatar" width="100" height="100" alt="" />
                 </div>
                 <div>
                   <h4 class="member__name">MR. X</h4>
                   <div class="member__role">CTO</div>
                 </div>
               </div>
-              <p class="member__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
+              <p class="member__text">Stubborn by profession, because it's the only way to get a
+                result when you do things out of the ordinary, I like running
+                and flying with a paraglider but since I landed in a tree, I
+                prefer running. I don't like to be seen, but only because they
+                say that beautiful girls like mysterious men.</p>
               <div class="member__link">
                 <a href="#"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
               </div>
