footer logo updated to svg

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ NFT <br>
           </div>
         </div>
         <div class="footer-logo">
-          <img src="./assets/images/logo-white-1.png" width="200" alt="" />
+          <img class="footer-logo__image" src="./assets/images/logo.svg" width="170" alt="" />
           <div>All rights reserved. 2023</div>
         </div>
       </div>
