--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <header>
+  <header>
       <div class="container">
         <nav>
           <div class="logo">
@@ -42,8 +42,57 @@
       </div>
     </header>
     <main>
+      <section class="day30">
+        <div style="position: relative; display: block;">
+            <img src="./assets/images/30-days-challenge.png" alt="">
+            <style>
+              .challenge-text{
+                font-weight: 800;
+                position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-37%);
+              }
+              .fs-1{
+                font-size: 160px;
+                font-size: clamp(3.125rem, -1.7857rem + 15.7143vw, 10rem);
+    color: #71BBC4;
+              }
+              .fs-2{
+                font-size: 70px;
+                font-size: 63px;
+                font-size: clamp(1.25rem, -0.9821rem + 7.1429vw, 4.375rem);
+                font-size: clamp(1.125rem, -1.1964rem + 7.4286vw, 4.375rem);
+                font-size: clamp(1.125rem, -0.8393rem + 6.2857vw, 3.875rem);
+                color: white;
+                white-space: nowrap;
+              }
+              .fs-3{
+    text-align: center;
+    /* margin-top: 50px; */
+    font-size: clamp(0.75rem, -0.9464rem + 5.4286vw, 3.125rem);
+    margin-top: 1em;
+              }
+              .fs33{
+                font-size: 50px;
+                font-size: clamp(0.75rem, -0.9464rem + 5.4286vw, 3.125rem);
+                background-color: #71BBC4;
+    padding: 0.25em 2em;
+    border-radius: 1em;
+                /* margin-top: 1em; */
+              }
+            </style>
+            <div class="challenge-text">
+              <div class="fs-1">SIGNUP</div>
+              <div class="fs-2">Mine alts, save BTC</div>
+              <div class="fs-3">
+                <a href="#" class="fs33">LOGIN</a>
+              </div>
+            </div>
+        </div>
+      </section>
       <!-- ========= Hero ======= -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <div class="hero-wrapper">
             <div class="hero-content">
@@ -58,7 +107,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- ========== Club ======= -->
       <section class="about" id="about">
         <div class="container">
@@ -394,9 +443,10 @@
                 the opposite of this AI-touched pic. At Aladino.io, you'll find
                 my outdated Linkedin profile and background, which I'll dust
                 off every now and then (maybe once every year or two).
-                I'm not a big fan of the social scene.</p>
+                Social scenes aren't exactly my cup of tea and my team and I are not job-hunting, folks!
+                </p>
               <div class="member__link">
-                <a href="https://www.linkedin.com/in/micheledomizi" target="_blank"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                <a href="https://www.linkedin.com/in/micheledomizi" target="_blank"><img src="./assets/images/linkedin-logo.svg" width="103" height="26" alt="" /></a>
               </div>
             </div>
             <!-- == Member card == -->
@@ -415,7 +465,7 @@
                 Always focused on exceeding expectations of customers, distributors and companies.
               </p>
               <div class="member__link">
-                <a href="https://www.linkedin.com/in/michelepelagagge/" target="_blank"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                <a href="https://www.linkedin.com/in/michelepelagagge/" target="_blank"><img src="./assets/images/linkedin-logo.svg" width="103" height="26" alt="" /></a>
               </div>
             </div>
             <!-- == Member card == -->
@@ -431,29 +481,13 @@
               </div>
               <p class="member__text">I started working as a certified public accountant and tax consultant, but I wasn't happy because I was helping people lose money and, moreover, making them pay taxes for not getting back the services they needed. So I started working inside companies to avoid these tears, with partial improvement. Today with Aladino I can also put together my experiences in crypto mining and make people happy.</p>
               <div class="member__link">
-                <a href="https://www.linkedin.com/in/paolo-musumeci-1126ab11" target="_blank"><img src="./assets/images/linkedin-logo.svg" width="103" alt="" /></a>
+                <a href="https://www.linkedin.com/in/paolo-musumeci-1126ab11" target="_blank"><img src="./assets/images/linkedin-logo.svg" width="103" height="26" alt="" /></a>
               </div>
             </div>
        
           </div>
         </div>
       </section>
-    
-      <!-- ======== FAQ ========== -->
-      <section class="faqs" id="faqs">
-        <div class="container">
-          <p class="tagline">Aladino FAQ’s</p>
-          <h2>WONDERLAND</h2>
-          <p class="text-center">When delving into the world of corporate Frequently Asked Questions (FAQs), it's often like wading through a pool of predictability and routine. These standard FAQ sections can sometimes feel as though they've been assembled from a cookie cutter template, offering responses that echo the same well-worn phrases.</p>
-          <p class="text-center semibold">Welcome to our FAQ wonderland – where questions are answered with a sprinkle of humor and a dash of wisdom! If you don’t like ours, you can always choose to see other companies answer they are all the same.</p>
-          <a href="/FAQ" class="faq-btn">Please check this link for full FAQ’s</a>
-        </div>
-        </section>
-        <section class="day30">
-          <a href="/30days">
-          <img src="./assets/images/30-days-challenge.png" alt="">
-        </a>
-        </section>
     </main>
     <footer class="footer">
       <div class="container">
@@ -487,7 +521,7 @@
           <div class="footer-info">
             <address>
               <span class="bold">Contact:</span>
-              <a href="mailto:email@aladino.com">email@aladino.com</a>
+              <a href="mailto:support@aladino.com">support@aladino.com</a>
             </address>
           </div>
         </div>
