revision 1 recommended by Michele

--- a/index.html
+++ b/index.html
@@ -375,7 +375,8 @@
           <h2 class="business-model__heading">Business Model</h2>
           <p class="subtitle">The first “automatic auotoshipping” in the industry</p>
           <div class="business-model-content">
-            <img class="business-model__image" src="./assets/images/businessmodel.svg" width="600" alt="" />
+            <!-- <img class="business-model__image" src="./assets/images/businessmodel.svg" width="600" alt="" /> -->
+            <img class="business-model__image" src="./assets/images/business-model.svg" width="650" alt="" />
           </div>
         </div>
       </section>
