--- a/index.html
+++ b/index.html
@@ -43,50 +43,13 @@
     </header>
     <main>
       <section class="day30">
-        <div style="position: relative; display: block;">
-            <img src="./assets/images/30-days-challenge.png" alt="">
-            <style>
-              .challenge-text{
-                font-weight: 800;
-                position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-37%);
-              }
-              .fs-1{
-                font-size: 160px;
-                font-size: clamp(3.125rem, -1.7857rem + 15.7143vw, 10rem);
-    color: #71BBC4;
-              }
-              .fs-2{
-                font-size: 70px;
-                font-size: 63px;
-                font-size: clamp(1.25rem, -0.9821rem + 7.1429vw, 4.375rem);
-                font-size: clamp(1.125rem, -1.1964rem + 7.4286vw, 4.375rem);
-                font-size: clamp(1.125rem, -0.8393rem + 6.2857vw, 3.875rem);
-                color: white;
-                white-space: nowrap;
-              }
-              .fs-3{
-    text-align: center;
-    /* margin-top: 50px; */
-    font-size: clamp(0.75rem, -0.9464rem + 5.4286vw, 3.125rem);
-    margin-top: 1em;
-              }
-              .fs33{
-                font-size: 50px;
-                font-size: clamp(0.75rem, -0.9464rem + 5.4286vw, 3.125rem);
-                background-color: #71BBC4;
-    padding: 0.25em 2em;
-    border-radius: 1em;
-                /* margin-top: 1em; */
-              }
-            </style>
+        <div class="relative">
+            <img src="./assets/images/30-days-challenge.png" width="1440" alt="">
             <div class="challenge-text">
               <div class="fs-1">SIGNUP</div>
               <div class="fs-2">Mine alts, save BTC</div>
               <div class="fs-3">
-                <a href="#" class="fs33">LOGIN</a>
+                <a href="https://my.aladino.io" class="fs33">LOGIN</a>
               </div>
             </div>
         </div>
