--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container">
         <nav>
           <div class="logo">
-            <a>
+            <a href="/">
               <img src="./assets/images/logo.svg" width="150" alt="Aladino logo" />
             </a>
           </div>
@@ -30,7 +30,6 @@
             <li><a href="#concept">Concept</a></li>
             <li><a href="#howtostart">How to start</a></li>
             <li><a href="#team">Team</a></li>
-            <li><a href="/faqs">FAQs</a></li>
           </ul>
           <div class="login-link">
             <a href="https://my.aladino.io/">Login</a>
@@ -48,10 +47,10 @@
         <div class="relative">
             <img src="./assets/images/30-days-challenge.png" width="1440" alt="">
             <div class="challenge-text">
-              <div class="fs-1">SIGNUP</div>
-              <div class="fs-2">Mine alts, save BTC</div>
+              <div class="fs-1">Signup started</div>
+              <div class="fs-2">Sales start on 28th</div>
               <div class="fs-3">
-                <a href="https://my.aladino.io" class="fs33">LOGIN</a>
+                <a href="https://my.aladino.io/signup" class="fs33">Signup</a>
               </div>
             </div>
         </div>
@@ -167,7 +166,7 @@
 
               <div class="strategy-card__content">
                 <h4>Device procurement strategy</h4>
-                <p class="strategy-card__text">We employ a carefully designed approach to acquire mining devices, factoring in various weightsto optimize efficiency and effectiveness.</p>
+                <p class="strategy-card__text">We employ a carefully designed approach to acquire mining devices, factoring in various weights to optimize efficiency and effectiveness.</p>
               </div>
             </div>
 
@@ -196,7 +195,7 @@
 
               <div class="strategy-card__content">
                 <h4>Defi & rebalancemet</h4>
-                <p class="strategy-card__text">Stacking and rewardsAltcoins-To-BTC swapping strategy.</p>
+                <p class="strategy-card__text">Stacking and rewards Altcoins-To-BTC swapping strategy.</p>
               </div>
             </div>
 
@@ -216,7 +215,7 @@
 
               <div class="strategy-card__content">
                 <h4>Aladino club, limited sales</h4>
-                <p class="strategy-card__text">Our Aladino Club offers a controlled sales environment with topping sales at 100 millions imit over time to safeguard interests and sustainability of the project.</p>
+                <p class="strategy-card__text">Our Aladino Club offers a controlled sales environment with topping sales at 100 millions limit over time to safeguard interests and sustainability of the project.</p>
               </div>
             </div>
             <!-- Strategy Card -->
@@ -286,7 +285,7 @@
               <div class="client-card__logo">
                 <img src="./assets/images/handlogo.svg" width="90" alt="" />
               </div>
-              <p>Inflation, also know as silent tax, is a global economic issue, eroding currency purchasing power over time.</p>
+              <p>Inflation, also known as silent tax, is a global economic issue, eroding currency purchasing power over time.</p>
             </div>
             <div class="client-card">
               <div class="client-card__logo">
@@ -454,6 +453,12 @@
           </div>
         </div>
       </section>
+      <section class="day30-footer">
+        <a href="/30days">
+        <img src="./assets/images/30-days-challenge-2.png" srcset="./assets/images/30-days-challenge-2x.png 2x" alt="">
+      </a>
+      <a class="day30-footer-link" href="/30days">https://aladino.io/30days</a>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
@@ -481,9 +486,6 @@
             <div class="footer-nav-item">
               <a href="#team">Team</a>
             </div>
-            <div class="footer-nav-item">
-              <a href="/FAQ">FAQs</a>
-            </div>
           </div>
           <div class="footer-nav footer-links--new">
            
@@ -498,9 +500,6 @@
               </div>
               <div class="footer-nav-item">
                 <a data-tooltip="Will be published before sales start" data-flow="top"> Customer general agreement </a>
-              </div>
-              <div class="footer-nav-item">
-                <a href="./assets/Pitch-desk.pdf">Pitch desk</a>
               </div>
           
           </div>
@@ -529,7 +528,9 @@
         </div>
    
         <div class="footer-logo">
-          <img class="footer-logo__image" src="./assets/images/logo.svg" width="170" alt="">
+          <a href="/">
+            <img class="footer-logo__image" src="./assets/images/logo.svg" width="170" alt="">
+          </a>
           <div>All rights reserved. 2023</div>
         </div>
       </div>
