Added time in top hero banner, updated footer

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
             <div class="hero-content">
               <h1>
                 <span class="subhead">Sign up Started</span> <br />
-                <span class="headline"
-                  >Sales Start <br />
-                  on the 28<sup>th</sup></span
-                >
+                <span class="headline">
+                  Sales Start <br />
+                  on the 28<span class="launch-time"
+                    ><sup>th</sup><span class="time">5:00 PM <br />UTC</span>
+                  </span>
+                </span>
               </h1>
               <p></p>
               <a href="https://my.aladino.io/signup" class="btn hero__cta">Lock your position NOW</a>
@@ -489,28 +491,22 @@
               </div>
             </div>
           </div>
-          <div class="footer-social">
-            <a data-tooltip="Available a week before sales start" data-flow="top">
-              <img src="./assets/images/telegram-icon.png" width="50" height="50" alt="" />
-            </a>
-            <a data-tooltip="Available a week before sales start" data-flow="top">
-              <img src="./assets/images/git-icon.png" width="50" height="50" alt="" />
-            </a>
-          </div>
+
           <div class="footer-info">
             <address>
               Company Address:<br />
+              <br />
               <span class="bold">Aladino International Group</span> <br />
               Panama <br />
               <br />
               <span class="bold">Aladino Holding MK</span> <br />
               Bahamas <br />
               <br />
-              Contact: <br />
-              <span class="bold">
-                <a href="mailto:support@aladino.io">support@aladino.com</a>
-              </span>
             </address>
+            <span class="bold">
+              Contact: <br />
+              <a href="mailto:support@aladino.io">support@aladino.com</a>
+            </span>
           </div>
         </div>
 
